Adds env arg for validate task
Signed-off-by: Haroon Sheikh <haroon.sheikh@sky.uk>